{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Cutscene",
            "id": "7d612d82-62c2-423b-bfca-18511c02dbaf",
            "actions": [
                {
                    "name": "SkipCutscene",
                    "type": "Button",
                    "id": "9dd3659d-4e5c-43ce-8f41-23c4aa964375",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e8969119-eec6-4f76-acd9-05997df10eec",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipCutscene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9d5d6fb-05d3-4e4e-a207-9e025b79593a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipCutscene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Timeline",
            "id": "66a09b81-7ebf-40d2-9ff9-acb1db615a4d",
            "actions": [
                {
                    "name": "SkipForward",
                    "type": "Button",
                    "id": "443d658d-3eaa-4851-b633-e5559934e8b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkipBackward",
                    "type": "Button",
                    "id": "83644339-c0b2-4932-98a3-4830753f5900",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayPause",
                    "type": "Button",
                    "id": "53456490-1710-4f31-bb98-4d4dfd72376c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AccelerateTime",
                    "type": "Button",
                    "id": "edf3b842-2276-4420-bd0a-366cefc47a29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecelerateTime",
                    "type": "Button",
                    "id": "c7272b39-4ca5-4e67-99a3-40dae8a0f7d8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d2db550-932a-40e0-844b-7d0ad68d9fab",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1542e775-be16-4fed-a3c9-e2d5564d6e3e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6838ed7-f63e-473e-926f-785a2d7f5095",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e175204-a05c-4640-b029-8e42ccada42a",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "842a1145-cf8a-4fc3-86a0-e7b025172cf0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0727ecb5-a2c6-416c-a68b-5e4180daa70d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14f9346b-e282-4bdf-96d8-916cfe9f6f1c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AccelerateTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64bb232f-41c3-4ec3-84c9-3ce98feca69e",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AccelerateTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8af36713-f549-4553-9691-c28f587126b8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecelerateTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3082415-c7d8-44e7-a359-3de2d09dfce5",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecelerateTime",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Custom UI",
            "id": "334f8711-92ea-4f2b-9644-3966a534db69",
            "actions": [
                {
                    "name": "Hide UI",
                    "type": "Button",
                    "id": "3bbd9955-7ccb-4d3c-8b3b-5f7ea848b6bd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31122a6b-43e3-478c-bad2-5e49f60e51dc",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hide UI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00dcbd1a-3b54-4072-afbc-e150564690b2",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hide UI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "cc75b880-a311-4d5b-9e22-e7539108eccf",
            "actions": [
                {
                    "name": "Orbit",
                    "type": "PassThrough",
                    "id": "523d59b7-d6d1-44a3-a4b7-5d11af7212a7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "540db8f9-7151-4a8f-a2a4-23f0e838dcd6",
                    "expectedControlType": "Axis",
                    "processors": "Invert",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71072933-2b45-4cb1-99f6-f814c4ae43f2",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Gamepad",
                    "id": "ccc2a7e8-cad3-4896-80f9-306a3cd80dd0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b23eccf2-19d5-4677-aabf-08e4e76a5ea5",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e5259133-821c-4a0e-9003-5419ded174b6",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse",
                    "id": "b880c102-331a-41b3-8aa7-a1a764d95be9",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Orbit",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "1d3522d7-5e36-469a-915f-0778438db933",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Orbit",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "421498fe-4a6e-47d2-8ae3-465620ac2910",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "DeltaTimeScale,ScaleVector2(x=0.06,y=0.06)",
                    "groups": "",
                    "action": "Orbit",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a2e2b5e0-af4c-4fb6-ad82-1292c536fad0",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=35,y=35)",
                    "groups": "",
                    "action": "Orbit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SidePanel",
            "id": "52ba4c4f-b804-467a-ac41-ea6fe4a03a27",
            "actions": [
                {
                    "name": "ToggleSkipCutscene",
                    "type": "Button",
                    "id": "5bbc5f0a-507f-4364-945c-38773fd6c785",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchDataPanel",
                    "type": "Button",
                    "id": "c2713a52-ce58-4958-8386-3a8fb8e0a755",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchActionsPanel",
                    "type": "Button",
                    "id": "8df208e1-d2ad-45f2-a962-d8a964f5b9aa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "990d59bc-bc5e-4c8b-b230-92ebaccb916f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSkipCutscene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b6b85dc-390d-48da-8a94-645d5c1bc0ad",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDataPanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58e2d8aa-5c28-412f-b143-73f2d6b80070",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchActionsPanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}